<resources>
    <string name="app_name">Homework1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="cardinal">#</string>
    <string name="asteric">*</string>
    <string name="del">DEL</string>
    <string name="call">Call</string>
    <string name="tooltip">Insert the phone number</string>
    <string name="tooltipName">Insert the contact name</string>
    <string name="mem1">Memory 1</string>
    <string name="mem2">Memory 2</string>
    <string name="mem3">Memory 3</string>
</resources>